# cpp_short

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: event.h  mainwindow.h  viewmodel.h
include/App/: app.h
include/Common/: common.h
include/Model/: app.h  event.h  game.h  gun.h  item.h  model.h  player.h
include/Model/components/: gun.h  item.h  player.h
include/View/: endpage1.h  endpage2.h  gameview.h  mainwindow.h  startpage.h
include/ViewModel/: viewmodel.h
src/: main.cpp  mainwindow.cpp  viewmodel.cpp
src/App/: app.cpp
src/Model/: app.cpp  event.cpp  game.cpp  gun.cpp  item.cpp  model.cpp  player.cpp
src/Model/components/: gun.cpp  item.cpp  player.cpp
src/View/: endpage1.cpp  endpage2.cpp  gameview.cpp  mainwindow.cpp  startpage.cpp
src/ViewModel/: viewmodel.cpp
src/game/: gun.h  item.cpp  item.h  player.h
src/include/: event.h
src/include/Model/: player.h
